Making the Website

--- a/contacts.html
+++ b/contacts.html
@@ -23,11 +23,11 @@
   <!-- Navbar -->
 <ul>
 	<li>
-    <div class="column" style="width:10%;"><br></div>
+    <div class="column" style="width:8%;"><br></div>
     <a href="index.html"><img src="logo.png" width="20%"></a>
   </li><br>
   <br><br>
-  <div class="column" style="width:10%;"><br></div>
+  <div class="column" style="width:14%;"><br></div>
   <li><a href="team.html">The Squad</a></li>
   <li><a href="contacts.html">Contact Us</a></li>
 </ul>
@@ -50,6 +50,17 @@
   <center><a>Derek Wang;</a><br>
   <a style="font-size:13px; text-decoration: underline;">dwang@thecollegepreparatoryschool.org</a></center>
 </div>
-  
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<table class="tablecenter">
+<tr>
+<td>
+  <h4>Website by Adie Guo '24</h4>
+</td>
+<td>
+<a href="matches.html"><img src="github.png" width="10%"></a>
+</td>
+</tr>
+</table>
 </body>
+
 </html>
