--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
   <!-- Navbar -->
 <ul>
 	<li>
-    <div class="column" style="width:10%;"><br></div>
+    <div class="column" style="width:8%;"><br></div>
     <a href="index.html"><img src="logo.png" width="20%"></a>
   </li><br>
   <br><br>
-  <div class="column" style="width:10%;"><br></div>
+  <div class="column" style="width:14%;"><br></div>
   <li><a href="team.html">The Squad</a></li>
   <li><a href="contacts.html">Contact Us</a></li>
 </ul>
@@ -57,6 +57,16 @@ $$</h3>
 \end{cases}   ~~~~~~~~~~    1+1=3
 $$</h3>
 </div>
-  
+<br><br><br><br><br><br><br><br><br>
+<table class="tablecenter">
+<tr>
+<td>
+  <h4>Website by Adie Guo '24</h4>
+</td>
+<td>
+<a href="matches.html"><img src="github.png" width="10%"></a>
+</td>
+</tr>
+</table>
   </body>
 </html>
