adding link to github

--- a/contacts.html
+++ b/contacts.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width">
   <link href="style.css" rel="stylesheet" type="text/css">
   <link href="navbar.css" rel="stylesheet" type="text/css">
-  <link rel="preconnect" href="https://fonts.googleapis.com"> 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Questrial&family=Roboto+Mono&display=swap" rel="stylesheet">
 </head>
 
@@ -57,7 +57,7 @@
   <h4>Website by Adie Guo '24</h4>
 </td>
 <td>
-<a href="matches.html"><img src="github.png" width="10%"></a>
+<a href="https://github.com/adelene-guo/Math-Squad-Website.git" target="_blank"><img src="github.png" width="10%"></a>
 </td>
 </tr>
 </table>
