--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width">
   <link href="style.css" rel="stylesheet" type="text/css">
   <link href="navbar.css" rel="stylesheet" type="text/css">
-  <link rel="preconnect" href="https://fonts.googleapis.com"> 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Questrial&family=Roboto+Mono&display=swap" rel="stylesheet">
 </head>
 
@@ -29,12 +29,12 @@
   <li><a href="team.html">The Squad</a></li>
   <li><a href="contacts.html">Contact Us</a></li>
 </ul>
-  
+
 <div class="equations">
 <h3 style = "color:white;">$$x = {-b \pm \sqrt{b^2-4ac} \over 2a}   ~~~~~~~~~~    a \cdot b= \sum \limits_ {i=1}^n a_i b_i   ~~~~~~~~~~    A \times B=\left\| A \right\| \left\| B \right\| \sin \theta   ~~~~~~~~~~    proj_b a= {a\cdot b \over \vert\vert{b}\vert\vert^2}b
 $$</h3>
 </div>
-  
+
 <h1>&nbsp;&nbsp;&nbsp;Math Squad</h1>
 <a>&nbsp;&nbsp;&nbsp;This cat you? Don't worry. We got your back.</a><br><br>
 <table>
@@ -48,7 +48,7 @@ $$</h3>
 </td>
 </tr>
 </table>
-  
+
 <div class="equations1">
 <h3 style = "color:white;">$$\int_{a}^b f(x)dx   ~~~~~~~~~~    LHS = \sum \limits_ {i=0}^{n-1} f(x_i) \Delta x   ~~~~~~~~~~    f(n) =
 \begin{cases}
@@ -64,7 +64,7 @@ $$</h3>
   <h4>Website by Adie Guo '24</h4>
 </td>
 <td>
-<a href="matches.html"><img src="github.png" width="10%"></a>
+<a href="https://github.com/adelene-guo/Math-Squad-Website.git" target="_blank"><img src="github.png" width="10%"></a>
 </td>
 </tr>
 </table>
