--- a/matches.html
+++ b/matches.html
@@ -59,7 +59,7 @@
     <h1 style="color: white;">The Squad</h1>
   </center>
   <h5 style="font-size: 20px;">Select your math level and free period, and look through the bios of available tutors.
-    When you're ready, fill out <a href="https://forms.gle/mbpXN73JS5rVVxNS7">this form</a> to request a tutor</h5>
+    When you're ready, fill out <a href="https://forms.gle/mbpXN73JS5rVVxNS7" target="_blank">this form</a> to request a tutor</h5>
   <br><br>
   <div class="container">
 
@@ -140,7 +140,7 @@
       <div class="myDIV"><img src="bio.png" style="width:45%;"></div>
       <div class="popup hide">
         <h2>Alessandra Sabelli</h2>
-        <h3>Hey y’all! I’m Alessandra and I’m a junior in 5i. 
+        <h3>Hey y’all! I’m Alessandra and I’m a junior in 5i.
 While I’ve always loved learning math, CPS's Exeter method was a big adjustment for me. I owe so much to my amazing peers for their help and patience. I'd love to pass that patience and compassion along to anyone who needs help with anything math-y!</h3>
       </div>
     </div>
@@ -228,7 +228,7 @@ While I’ve always loved learning math, CPS's Exeter method was a big adjustmen
       <div class="myDIV"><img src="bio.png" style="width:45%;"></div>
       <div class="popup hide">
         <h2>Rahim Malik</h2>
-        <h3>Hi there! I’m Rahim and I’m a senior in Math 6. I find math pretty fun, but when I don't understand it, it's pretty much a nightmare. I like teaching visually, mainly because I'm a visual learner. A typical meeting with me with involve lots of us both doing math on whiteboard tables. We'll go through one or two practice problems together, then you'll do a few practice problems yourself to nail in the concept. 
+        <h3>Hi there! I’m Rahim and I’m a senior in Math 6. I find math pretty fun, but when I don't understand it, it's pretty much a nightmare. I like teaching visually, mainly because I'm a visual learner. A typical meeting with me with involve lots of us both doing math on whiteboard tables. We'll go through one or two practice problems together, then you'll do a few practice problems yourself to nail in the concept.
 <br><br>
 My free periods are F and H2, but most lunches work for me too. Email me at rmalik@college-prep.org!</h3>
       </div>
@@ -350,7 +350,7 @@ I’m more than happy to help with any questions you have or to just talk! I’m
   <h4>Website by Adie Guo '24</h4>
 </td>
 <td>
-<a href="matches.html"><img src="github.png" width="10%"></a>
+<a href="https://github.com/adelene-guo/Math-Squad-Website.git" target="_blank"><img src="github.png" width="10%"></a>
 </td>
 </tr>
 </table>
