--- a/matches.html
+++ b/matches.html
@@ -343,6 +343,19 @@ I’m more than happy to help with any questions you have or to just talk! I’m
       </div>
     </div>
   </div>
+  
+  <div class="filterDiv 1  2 5 B F">
+
+      <br>
+      <img src="alexandra.png" alt="Avatar" style="width:170px; height:170px;" class="center">
+      <h4>Alexandra Kozlova '24</h4>
+      <div class="myDIV"><img src="bio.png" style="width:45%;"></div>
+      <div class="popup hide">
+        <h2>Alexandra Kozlova</h2>
+        <h3>Hi I'm Alex 🐐! I'm currently a junior in math 5. I enjoy working through problems slowly, and finding new ways to make math fun! I genuinely enjoy helping others with math, and I hope to inspire a passion for math in others :) I know math can get really tough, and certain problems can become incredibly tedious, so as a math squad member I will be there for you if you need a patient, helping hand. My free blocks are B and F, please reach out to me by email (akozlova@college-prep.org).</h3>
+      </div>
+    </div>
+  </div>
   <br><br><br><br><br><br>
 <table class="tablecenter">
 <tr>
