--- a/team.html
+++ b/team.html
@@ -304,6 +304,18 @@
     </div>
   </div>
 </div>
+ 
+    <div class="card">
+    <div class="card2">
+     <br>
+      <br>
+      <br>
+      <img src="alexandra.png" alt="Avatar" style="width:170px; height:170px;" class="center">
+      <h4>Alexandra Kozlova '24</h4>
+      <h4>Math Squad Tutor</h4>
+    </div>
+  </div>
+</div>
  <br><br><br><br><br><br>
 
 <table class="tablecenter">
