--- a/team.html
+++ b/team.html
@@ -303,7 +303,7 @@
       <h4>Math Squad Tutor</h4>
     </div>
   </div>
-
+&nbsp;&nbsp;&nbsp;&nbsp;
     <div class="card">
     <div class="card2">
      <br>
