--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </li><br>
   <br><br>
   <div class="column" style="width:14%;"><br></div>
-  <li><a href="team.html">The Squad</a></li>
+  <li><a href="matches.html">The Squad</a></li>
   <li><a href="contacts.html">Contact Us</a></li>
 </ul>
 
