--- a/matches.html
+++ b/matches.html
@@ -234,7 +234,7 @@ My free periods are F and H2, but most lunches work for me too. Email me at rmal
       </div>
     </div>
 
-    <div class="filterDiv 2    3  4  5  6  7  8 G H">
+    <div class="filterDiv 2    3  4  5  6  7  8 B H">
 
       <br>
       <img src="finn.png" alt="Avatar" style="width:170px; height:170px;" class="center">
