--- a/matches.html
+++ b/matches.html
@@ -132,7 +132,7 @@
       </div>
     </div>
 
-    <div class="filterDiv 1  2    3  4  5  6 B H">
+    <div class="filterDiv 1  2    3  4  5  6 B F">
 
       <br>
       <img src="alessandra.png" alt="Avatar" style="width:170px; height:170px;" class="center">
@@ -147,7 +147,7 @@ While I’ve always loved learning math, CPS's Exeter method was a big adjustmen
 
 
 
-    <div class="filterDiv 1  2    3  4  5  6  7  8 H">
+    <div class="filterDiv 1  2    3  4  5  6  7  8 B G">
 
       <br>
       <img src="araddhya.png" alt="Avatar" style="width:170px; height:170px;" class="center">
@@ -171,7 +171,7 @@ While I’ve always loved learning math, CPS's Exeter method was a big adjustmen
       </div>
     </div>
 
-    <div class="filterDiv 1  2    3  4  5  6  7  8 C E">
+    <div class="filterDiv 1  2    3  4  5  6  7  8 E">
 
       <br>
       <img src="zane.png" alt="Avatar" style="width:170px; height:170px;" class="center">
@@ -195,7 +195,7 @@ While I’ve always loved learning math, CPS's Exeter method was a big adjustmen
       </div>
     </div>
 
-    <div class="filterDiv 1  2    3  4  5  6 B F">
+    <div class="filterDiv 1  2    3  4  5  6 B C">
 
       <br>
       <img src="henry.png" alt="Avatar" style="width:170px; height:170px;" class="center">
@@ -264,7 +264,7 @@ I really love math and the satisfaction that comes from solving a problem. The E
       </div>
     </div>
 
-    <div class="filterDiv 1  2    3  4  5  6  7  8 A G">
+    <div class="filterDiv 1  2    3  4  5  6  7  8 A C">
 
       <br>
       <img src="jude.png" alt="Avatar" style="width:170px; height:170px;" class="center">
@@ -288,7 +288,7 @@ I really love math and the satisfaction that comes from solving a problem. The E
       </div>
     </div>
 
-    <div class="filterDiv  1  2    3  4  5  6  7  8  9 C G H">
+    <div class="filterDiv  1  2    3  4  5  6  7  8  9 C H">
 
       <br>
       <img src="julianvuong.png" alt="Avatar" style="width:170px; height:170px;" class="center">
@@ -307,7 +307,7 @@ I’m more than happy to help with any questions you have or to just talk! I’m
 
 
 
-    <div class="filterDiv  1  2    3  4  5  6  7  8  9 G H">
+    <div class="filterDiv  1  2    3  4  5  6  7  8  9 C H">
 
       <br>
       <img src="william.png" alt="Avatar" style="width:170px; height:170px;" class="center">
