--- a/index.html
+++ b/index.html
@@ -41,10 +41,8 @@ $$</h3>
 <div class="column" style="width:3%;"><br></div>
 <tr>
 <td>
-  <a>&nbsp;Let's find you some support</a>
-</td>
-<td>
-<a href="matches.html"><img src="nextbutton.png" width="15%"></a>
+  <a>Find your </a><a href="matches.html">tutor preferences</a><br>
+<a>Or immediately <a href="https://mail.google.com/mail/u/0/?fs=1&to=aguo@college-prep.org&cc=aratna2@college-prep.org&bcc=rzhu@college-prep.org&su=%5BMATH-SQUAD-REQUEST%5D Who Ya Gonna Call? Math Busters&body=My math level is ... My free block is ... If I have any, my tutor preference(s) are ...&tf=cm">request for help</a></a>
 </td>
 </tr>
 </table>
