--- a/matches.html
+++ b/matches.html
@@ -40,6 +40,8 @@
       <option value="7">5</option>
       <option value="8">5i</option>
       <option value="9">6</option>
+      <option value="10">Abstract Alg</option>
+      <option value="11">Stats</option>
     </select>
 
     <select id="frees" onchange="frees();">
