--- a/index.html
+++ b/index.html
@@ -40,27 +40,25 @@ $$</h3>
 <div class="column" style="width:3%;"><br></div>
 <tr>
 <td>
-  <a>Find your </a><a href="matches.html">tutor preferences</a><br>
+<a>Find your </a><a href="matches.html">tutor preferences</a><br>
 <a>Or immediately <a href="https://mail.google.com/mail/u/0/?fs=1&to=aguo@college-prep.org&cc=aratna2@college-prep.org&bcc=rzhu@college-prep.org&su=%5BMATH-SQUAD-REQUEST%5D Who Ya Gonna Call? Math Busters&body=My math level is ... My free block is ... If I have any, my tutor preference(s) are ...&tf=cm">request for help</a></a>
 </td>
 </tr>
 </table>
 
 <div class="equations1">
-<h3 style = "color:white;">$$\int_{a}^b f(x)dx   ~~~~~~~~~~    LHS = \sum \limits_ {i=0}^{n-1} f(x_i) \Delta x   ~~~~~~~~~~    f(n) =
-\begin{cases}
-\frac{n}{2},  & \text{if $n$ is even} \\[2ex]
-3n+1, & \text{if $n$ is odd}
-\end{cases}   ~~~~~~~~~~    1+1=3
+<h3 style = "color:white;">$$\int_{a}^b f(x)dx   ~~~~~~~~~~    LHS = \sum \limits_ {i=0}^{n-1} f(x_i) \Delta x   ~~~~~~~~~~    f(n) =\begin{cases}\frac{n}{2},  & \text{if $n$ is even} \\[2ex]3n+1, & \text{if $n$ is odd}\end{cases}   ~~~~~~~~~~    1+1=3
 $$</h3>
 </div>
-<br><br><br><br><br><br><br><br><br>
+
 <table class="tablecenter">
 <tr>
 <td>
+  <br><br><br><br><br><br><br><br><br>
   <h4>Website by Adie Guo '24</h4>
 </td>
 <td>
+  <br><br><br><br><br><br><br><br><br>
 <a href="https://github.com/adelene-guo/Math-Squad-Website.git" target="_blank"><img src="github.png" width="10%"></a>
 </td>
 </tr>
