--- a/contacts.html
+++ b/contacts.html
@@ -32,7 +32,7 @@
   <li><a href="contacts.html">Contact Us</a></li>
 </ul>
 
-<div style="position; absolute; top: 25%;">
+<div style="position: absolute; top: 25%;">
 <center><h1 style="color:white;">Any Questions? Comments? Suggestions?</h1><a style="color:white">Contact a leader!</a></center>
 </div>
 
