--- a/contacts.html
+++ b/contacts.html
@@ -28,17 +28,17 @@
   </li><br>
   <br><br>
   <div class="column" style="width:14%;"><br></div>
-  <li><a href="team.html">The Squad</a></li>
-  <li><a href="contacts.html">Contact Us</a></li>
+  <li><a href="matches.html">Ask the Squad</a></li>
+  <li><a href="contacts.html">Anything Else?</a></li>
 </ul>
 
-<div style="position: absolute; top: 25%;">
-<center><h1 style="color:white;">Any Questions? Comments? Suggestions?</h1><a style="color:white">Contact a leader!</a></center>
+<div style=" top: 25%;">
+<center><h1 style="color:white; text-align: center;">Any Questions? Comments? Suggestions?</h1></center>
 </div>
 
 <div class="container" style="height: 100px; width: 340px; color:white; position: absolute; top: 48%; left: 7%;">
-  <center><a>Angelina Peng;</a><br>
-  <a style="font-size:13px; text-decoration: underline;">apeng@thecollegepreparatoryschool.org</a></center>
+  <center><a>Arnav Ratna;</a><br>
+  <a style="font-size:13px; text-decoration: underline;">aratna@thecollegepreparatoryschool.org</a></center>
 </div>
 
 <div class="container" style="height: 100px; width: 340px; color:white; position: absolute; top: 52%; left: 38%;">
@@ -47,8 +47,8 @@
 </div>
 
 <div class="container" style="height: 100px; width: 340px; color:white; position: absolute; top: 40%; left: 68%;">
-  <center><a>Derek Wang;</a><br>
-  <a style="font-size:13px; text-decoration: underline;">dwang@thecollegepreparatoryschool.org</a></center>
+  <center><a>Lexi Zhu;</a><br>
+  <a style="font-size:13px; text-decoration: underline;">rzhu@thecollegepreparatoryschool.org</a></center>
 </div>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <table class="tablecenter">
