--- a/matches.html
+++ b/matches.html
@@ -23,8 +23,8 @@
     </li><br>
     <br><br>
     <div class="column" style="width:14%;"><br></div>
-    <li><a href="team.html">The Squad</a></li>
-    <li><a href="contacts.html">Contact Us</a></li>
+    <li><a href="matches.html">Ask the Squad</a></li>
+    <li><a href="contacts.html">Anything Else?</a></li>
   </ul>
   <div class="column" style="width:70%;"></div>
 
@@ -61,7 +61,7 @@
     <h1 style="color: white;">The Squad</h1>
   </center>
   <h5 style="font-size: 20px;">Select your math level and free period, and look through the bios of available tutors.
-    When you're ready, fill out <a href="https://forms.gle/mbpXN73JS5rVVxNS7" target="_blank">this form</a> to request a tutor</h5>
+    When you're ready, <a href="https://mail.google.com/mail/u/0/?fs=1&to=aguo@college-prep.org&cc=aratna2@college-prep.org&bcc=rzhu@college-prep.org&su=%5BMATH-SQUAD-REQUEST%5D%20Who%20Ya%20Gonna%20Call?%20Math%20Busters&body=My%20math%20level%20is%20...%20My%20free%20block%20is%20...%20If%20I%20have%20any,%20my%20tutor%20preference(s)%20are%20...&tf=cm">send a request</a></h5>
   <br><br>
   <div class="container">
 
