--- a/team.html
+++ b/team.html
@@ -22,8 +22,8 @@
     </li><br>
     <br><br>
     <div class="column" style="width:14%;"><br></div>
-    <li><a href="team.html">The Squad</a></li>
-    <li><a href="contacts.html">Contact Us</a></li>
+    <li><a href="team.html">Ask the Squad</a></li>
+    <li><a href="contacts.html">Anything Else?</a></li>
   </ul>
 
 <center><h1 style="color: white;">The Squad</h1></center><br><br>
