--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   </li><br>
   <br><br>
   <div class="column" style="width:14%;"><br></div>
-  <li><a href="matches.html">The Squad</a></li>
-  <li><a href="contacts.html">Contact Us</a></li>
+  <li><a href="matches.html">Ask the Squad</a></li>
+  <li><a href="contacts.html">Anything Else?</a></li>
 </ul>
 
 <div class="equations">
