--- a/matches.html
+++ b/matches.html
@@ -113,7 +113,7 @@
             <h3>I'm Ari, and I love math! I started CPS in 2, and I am now in 5i. This means that I've set up learning practices and systems for a math level you are in. Sometimes it can be hard to learn a new concept, or how to apply one you've already learned. I'm in the learning center most of the time if you want to find me without scheduling a meeting.</h3> </div> </div>
           
       <div class="filterDiv 1 3 4 5 6 A G">
-      <br> <img src="jules.png" alt="Avatar" style="width:170px; height:170px;" class="center"> <h4>Jules Wolff-Merovick ‘25</h4> <div class="myDIV"><img src="bio.png" style="width:45%;"></div> <div class="popup hide"> <h2>Jules Wolff-Merovick</h2>
+      <br> <img src="jules1.png" alt="Avatar" style="width:170px; height:170px;" class="center"> <h4>Jules Wolff-Merovick ‘25</h4> <div class="myDIV"><img src="bio.png" style="width:45%;"></div> <div class="popup hide"> <h2>Jules Wolff-Merovick</h2>
       <h3>Hi! I'm Jules and I'm a junior in Math 5i. I am a big fan of drawing diagrams to explain confusing problems because I find it hard to comprehend concepts without visualizing them. I try to be super clear in my explanations so that you can get a thorough understanding of whatever's confusing you, instead of just helping you answer a single question. If you're having any issues with math, big or small, I'm more than happy to help!</h3> </div> </div>
       
       <div class="filterDiv 1 2 G">
